feat: Implements JWT Authentication

--- a/CatalogMinimalApi/appsettings.json
+++ b/CatalogMinimalApi/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=3306;Database=CatalogMinApi;Uid=root;Pwd=1234;"
   },
+  "Jwt": {
+    "Key": "#S3cr3tK3y@F0r4uth3nt1c4t10n!*9927*27667!33345&f!n1$h",
+    "Issuer": "Gio",
+    "Audience": "https://github.com/Giovani-O"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
